cmake_minimum_required(VERSION 3.0)
project(mll)
set(CMAKE_CXX_STANDARD 17)
set(SRC "../project_mll/main.cpp")
list(APPEND SRC "../src/CmdLineParserLite/cmdlineparserlite.cpp")
list(APPEND SRC "../src/MozillaLoginLite/mozillaloginlite.cpp")
list(APPEND SRC "../src/NSSCryptoLite/nsscryptolite.cpp")
add_executable(${PROJECT_NAME} ${SRC})
target_link_libraries(mll ${CMAKE_DL_LIBS})
